@@ -1,4 +1,8 @@
 2010-11-06  Robert Larice
+ * src/frontend/parser/lexical.c :
+    minor rewrite, a local variable type change
+
+2010-11-06  Robert Larice
  * src/frontend/evaluate.c :
     tiny rewrite to avoid "variable ... might be clobbered by 'longjmp'" warnings
 
